--- a/buy.html
+++ b/buy.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-  fuck you
+<body id="buying">
+coming soon on the never/never/never
 </body>
 </html>
