--- a/advert.html
+++ b/advert.html
@@ -7,7 +7,7 @@
   <iframe width="830" height="460"
   src="https://www.youtube.com/embed/U9t-slLl30E" id="iframe"
   frameborder="0" encrypted-media"></iframe>
-  </div>
+  <img src="Logo.png">
 </body>
 <p>
 </p>
