--- a/advert.html
+++ b/advert.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>NeuroLens Home Page</title>
 </head>
 <body id="advert">
   <a href="buy.html" class="buy">Buy Now!</a>
