--- a/buy.html
+++ b/buy.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>NeuroLens this is all fake Page</title>
 </head>
 <body id="buying">
 coming soon on the never/never/never
