--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>NeuroLens Welcome Page</title>
 </head>
 <body id="main">
   <a href="advert.html" class="buy">HomePage!</a>
